force-app/main/default/objects/OB_Amendment__c/OB_Amendment__c.object-meta.xml
<CustomObject>
    <label>Service Request Amendment</label>
    <nameField>
        <displayFormat>SRLI{00000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>