force-app/main/default/objects/OB_Amendment__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>Building / Villa #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>