force-app/main/default/objects/OB_Amendment__c/fields/Are_you_a_Politically_Exposed_Person__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_Politically_Exposed_Person__c</fullName>
    <label>Are you a Politically Exposed Person?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>