force-app/main/default/objects/OB_Amendment__c/fields/Are_you_the_custodian__c.field-meta.xml
<CustomField>
    <fullName>Are_you_the_custodian__c</fullName>
    <label>Are you the custodian?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>