force-app/main/default/objects/OB_Amendment__c/fields/Are_you_the_general_manager_or_someone__c.field-meta.xml
<CustomField>
    <fullName>Are_you_the_general_manager_or_someone__c</fullName>
    <label>Are you the general manager, or someone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Myself</fullName>
            </value>
            <value>
                <fullName>Someone Else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>