force-app/main/default/objects/OB_Amendment__c/fields/CID_File_Id__c.field-meta.xml
<CustomField>
    <fullName>CID_File_Id__c</fullName>
    <label>CSCS File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>