force-app/main/default/objects/OB_Amendment__c/fields/CID_Status__c.field-meta.xml
<CustomField>
    <fullName>CID_Status__c</fullName>
    <description>This is used to track the CID Integration status internally</description>
    <label>CID Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Return for More Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>