force-app/main/default/objects/OB_Amendment__c/fields/City_of_P_O_Box__c.field-meta.xml
<CustomField>
    <fullName>City_of_P_O_Box__c</fullName>
    <label>City of P.O. Box</label>
    <length>30</length>
    <type>Text</type>
</CustomField>