force-app/main/default/objects/OB_Amendment__c/fields/City_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>City_of_Registration__c</fullName>
    <label>City of Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Ajman</fullName>
            </value>
            <value>
                <fullName>Dubai</fullName>
            </value>
            <value>
                <fullName>Fujairah</fullName>
            </value>
            <value>
                <fullName>Ras Al Khaimah</fullName>
            </value>
            <value>
                <fullName>Sharjah</fullName>
            </value>
            <value>
                <fullName>Umm Al Quwain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>