force-app/main/default/objects/OB_Amendment__c/fields/CityofRegistration__c.field-meta.xml
<CustomField>
    <fullName>CityofRegistration__c</fullName>
    <label>City of Registration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>