force-app/main/default/objects/OB_Amendment__c/fields/Company_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Arabic__c</fullName>
    <label>Company Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>