force-app/main/default/objects/OB_Amendment__c/fields/Confirm_Email__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Email__c</fullName>
    <label>Confirm Email</label>
    <type>Email</type>
</CustomField>