force-app/main/default/objects/OB_Amendment__c/fields/Contact_Person_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Role__c</fullName>
    <label>Contact Person Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRO</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
                <label>General Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>