force-app/main/default/objects/OB_Amendment__c/fields/Corporate_Account__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>DWC Account - Registered</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Service_Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>