force-app/main/default/objects/OB_Amendment__c/fields/CSCS_CitizenOrResident__c.field-meta.xml
<CustomField>
    <fullName>CSCS_CitizenOrResident__c</fullName>
    <formula>IF(CSCS_VisitedUAE__c = 1 &amp;&amp; TEXT(Are_you_resident_in_the_UAE__c) = &apos;Yes&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSCS_CitizenOrResident</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>