force-app/main/default/objects/OB_Amendment__c/fields/CSCS_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>CSCS_Member_Id__c</fullName>
    <description>CID Member Id</description>
    <externalId>true</externalId>
    <label>CSCS Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>