force-app/main/default/objects/OB_Amendment__c/fields/CSCS_MemberCatType__c.field-meta.xml
<CustomField>
    <fullName>CSCS_MemberCatType__c</fullName>
    <label>CSCS Member Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Person</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Foreign Investor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>