force-app/main/default/objects/OB_Amendment__c/fields/CSCS_MemberStatus__c.field-meta.xml
<CustomField>
    <fullName>CSCS_MemberStatus__c</fullName>
    <formula>IF( CSCS_Status__c = &apos;Approved&apos;, &apos;00&apos;,&apos;01&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSCS_MemberStatus</label>
    <type>Text</type>
</CustomField>