force-app/main/default/objects/OB_Amendment__c/fields/CSCS_Status__c.field-meta.xml
<CustomField>
    <fullName>CSCS_Status__c</fullName>
    <label>CSCS Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>