force-app/main/default/objects/OB_Amendment__c/fields/CSCS_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>CSCS_Status_Reason__c</fullName>
    <label>CSCS Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>