force-app/main/default/objects/OB_Amendment__c/fields/CSCS_VisitedUAE__c.field-meta.xml
<CustomField>
    <fullName>CSCS_VisitedUAE__c</fullName>
    <formula>IF( TEXT(Have_you_visited_the_UAE_before__c) = &apos;Yes&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSCS_VisitedUAE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>