force-app/main/default/objects/OB_Amendment__c/fields/DACC_Registered__c.field-meta.xml
<CustomField>
    <fullName>DACC_Registered__c</fullName>
    <label>DACC Registered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>