force-app/main/default/objects/OB_Amendment__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>