force-app/main/default/objects/OB_Amendment__c/fields/Date_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incorporation__c</fullName>
    <label>Date of Incorporation</label>
    <type>Date</type>
</CustomField>