force-app/main/default/objects/OB_Amendment__c/fields/Do_you_have_dual_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_dual_Nationality__c</fullName>
    <label>Do you have dual Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>