force-app/main/default/objects/OB_Amendment__c/fields/Do_you_need_Establishment_Card__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_Establishment_Card__c</fullName>
    <label>Do you need Establishment Card?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>