force-app/main/default/objects/OB_Amendment__c/fields/Document_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Document_Sequence__c</fullName>
    <label>Document Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>