force-app/main/default/objects/OB_Amendment__c/fields/DocuSign_Env_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Env_Status__c</fullName>
    <description>DocuSign Envelope Status</description>
    <inlineHelpText>DocuSign Envelope Status</inlineHelpText>
    <label>ID Verification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>