force-app/main/default/objects/OB_Amendment__c/fields/Emirates_ID__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID__c</fullName>
    <label>Emirates ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>