force-app/main/default/objects/OB_Amendment__c/fields/Establishment_Card_Urgent_Processing__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Card_Urgent_Processing__c</fullName>
    <label>Establishment Card - Urgent Processing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>