force-app/main/default/objects/OB_Amendment__c/fields/Evidence_Id__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Id__c</fullName>
    <label>Evidence Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>