force-app/main/default/objects/OB_Amendment__c/fields/Exception_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Company_Type__c</fullName>
    <label>Exception Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A subsidiary or branch of company listed in a recognized stock exchange</fullName>
            </value>
            <value>
                <fullName>A subsidiary or branch of a government owned entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>