force-app/main/default/objects/OB_Amendment__c/fields/File_Uploaded_to_CID__c.field-meta.xml
<CustomField>
    <fullName>File_Uploaded_to_CID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Uploaded to CID?</label>
    <type>Checkbox</type>
</CustomField>