force-app/main/default/objects/OB_Amendment__c/fields/Full_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Arabic__c</fullName>
    <label>Full Name (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>