force-app/main/default/objects/OB_Amendment__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>First_Name__c +IF(ISBLANK(Middle_Name__c ), &apos;&apos;, &apos; &apos;+Middle_Name__c)+ &apos; &apos;+Last_Name__c</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>