force-app/main/default/objects/OB_Amendment__c/fields/Have_you_visited_the_UAE_before__c.field-meta.xml
<CustomField>
    <fullName>Have_you_visited_the_UAE_before__c</fullName>
    <label>Have you visited the UAE before?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>