force-app/main/default/objects/OB_Amendment__c/fields/How_this_individual_became_the_UBO__c.field-meta.xml
<CustomField>
    <fullName>How_this_individual_became_the_UBO__c</fullName>
    <label>How this individual became the UBO</label>
    <type>TextArea</type>
</CustomField>