force-app/main/default/objects/OB_Amendment__c/fields/IDV_Recipient__c.field-meta.xml
<CustomField>
    <fullName>IDV_Recipient__c</fullName>
    <formula>IF(ISBLANK(POA_Name__c), FullName__c, POA_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDV_Recipient</label>
    <type>Text</type>
</CustomField>