force-app/main/default/objects/OB_Amendment__c/fields/Is_Director__c.field-meta.xml
<CustomField>
    <fullName>Is_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Director</label>
    <type>Checkbox</type>
</CustomField>