force-app/main/default/objects/OB_Amendment__c/fields/Is_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manager</label>
    <type>Checkbox</type>
</CustomField>