force-app/main/default/objects/OB_Amendment__c/fields/Is_Secretary__c.field-meta.xml
<CustomField>
    <fullName>Is_Secretary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Secretary</label>
    <type>Checkbox</type>
</CustomField>