force-app/main/default/objects/OB_Amendment__c/fields/Is_Share_Holder__c.field-meta.xml
<CustomField>
    <fullName>Is_Share_Holder__c</fullName>
    <formula>IF(INCLUDES(Role__c, &quot;Shareholder&quot; ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Share Holder</label>
    <type>Checkbox</type>
</CustomField>