force-app/main/default/objects/OB_Amendment__c/fields/Is_UBO__c.field-meta.xml
<CustomField>
    <fullName>Is_UBO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is UBO</label>
    <type>Checkbox</type>
</CustomField>