force-app/main/default/objects/OB_Amendment__c/fields/Is_User_Required_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Required_Portal_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is User Required Portal Access?</label>
    <type>Checkbox</type>
</CustomField>