force-app/main/default/objects/OB_Amendment__c/fields/Last_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Arabic__c</fullName>
    <label>Last Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>