force-app/main/default/objects/OB_Amendment__c/fields/Lexis_Nexis_Bridger_Alert_Id__c.field-meta.xml
<CustomField>
    <fullName>Lexis_Nexis_Bridger_Alert_Id__c</fullName>
    <label>Lexis Nexis Bridger Alert Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>