force-app/main/default/objects/OB_Amendment__c/fields/Lexis_Nexis_Record_Matches__c.field-meta.xml
<CustomField>
    <fullName>Lexis_Nexis_Record_Matches__c</fullName>
    <description>This is to captue the bridger record matches</description>
    <label>Lexis Nexis Matches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>