force-app/main/default/objects/OB_Amendment__c/fields/Lexis_Nexis_Status__c.field-meta.xml
<CustomField>
    <fullName>Lexis_Nexis_Status__c</fullName>
    <label>Lexis Nexis Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>