force-app/main/default/objects/OB_Amendment__c/fields/License_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Issue_Date__c</fullName>
    <label>License Issue Date</label>
    <type>Date</type>
</CustomField>