force-app/main/default/objects/OB_Amendment__c/fields/Middle_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_Arabic__c</fullName>
    <label>Middle Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>