force-app/main/default/objects/OB_Amendment__c/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>IF( RecordType.Name = &apos;Individual&apos;,  Full_Name__c , IF( RecordType.Name = &apos;Corporate&apos;  &amp;&amp; TEXT(DACC_Registered__c) = &apos;YES&apos;,Corporate_Account__r.Name, IF(RecordType.Name = &apos;Corporate&apos;  &amp;&amp; TEXT(DACC_Registered__c) != &apos;Yes&apos;,Company_Name__c, &apos;&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>