force-app/main/default/objects/OB_Amendment__c/fields/No_of_Pledged_Shares__c.field-meta.xml
<CustomField>
    <fullName>No_of_Pledged_Shares__c</fullName>
    <label>No. of Pledged Shares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>