force-app/main/default/objects/OB_Amendment__c/fields/No_of_transfer_shares__c.field-meta.xml
<CustomField>
    <fullName>No_of_transfer_shares__c</fullName>
    <label>No of transfer shares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>