force-app/main/default/objects/OB_Amendment__c/fields/OB_Amendment__c.field-meta.xml
<CustomField>
    <fullName>OB_Amendment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent onBoarding Amendment</label>
    <referenceTo>OB_Amendment__c</referenceTo>
    <relationshipName>OB_Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>