force-app/main/default/objects/OB_Amendment__c/fields/Onboard_Request__c.field-meta.xml
<CustomField>
    <fullName>Onboard_Request__c</fullName>
    <label>Service Request</label>
    <referenceTo>Onboard_Request__c</referenceTo>
    <relationshipName>Onboarding_Licensing_Amendments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>