force-app/main/default/objects/OB_Amendment__c/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <label>Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Government / Listed on Stock Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>