force-app/main/default/objects/OB_Amendment__c/fields/Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage__c</fullName>
    <formula>IF(No_of_shares__c != 0 , No_of_shares__c / Onboard_Request__r.Share_Capital__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>