force-app/main/default/objects/OB_Amendment__c/fields/Passport_CV_Id1__c.field-meta.xml
<CustomField>
    <fullName>Passport_CV_Id1__c</fullName>
    <label>Passport CV Id1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>