force-app/main/default/objects/OB_Amendment__c/fields/Passport_CV_Id__c.field-meta.xml
<CustomField>
    <fullName>Passport_CV_Id__c</fullName>
    <label>Passport CV Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>