force-app/main/default/objects/OB_Amendment__c/fields/Passport_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiry_Date__c</fullName>
    <label>Passport Expiry Date</label>
    <type>Date</type>
</CustomField>