force-app/main/default/objects/OB_Amendment__c/fields/Passport_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issued_Date__c</fullName>
    <label>Passport Issued Date</label>
    <type>Date</type>
</CustomField>