force-app/main/default/objects/OB_Amendment__c/fields/Passport_Issuing_Country__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issuing_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passport Issuing Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Country__c.Valid_Country__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Onboarding_Licensing_Amendments3</relationshipName>
    <type>Lookup</type>
</CustomField>