force-app/main/default/objects/OB_Amendment__c/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <label>Payment Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>