force-app/main/default/objects/OB_Amendment__c/fields/PEP_Other__c.field-meta.xml
<CustomField>
    <fullName>PEP_Other__c</fullName>
    <label>PEP Other</label>
    <type>TextArea</type>
</CustomField>