force-app/main/default/objects/OB_Amendment__c/fields/Percentage_of_Pledged_shares__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Pledged_shares__c</fullName>
    <label>Percentage of Pledged shares</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>